@@ -1,0 +1,265 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u6284\u8972\u98a8\u6ce2\u672a\u5e73\uff01ILLIT\u5805\u6301\u81ea\u6211\u767c\u884c\u65b0EP\uff1a\u6211\u5011\u7684\u97f3\u6a02\u53ea\u70ba\u4e86\u8b93\u7c89\u7d72\u611f\u5230\u559c\u6085", "description": "\u6284\u8972\u98a8\u6ce2\u672a\u5e73\uff01ILLIT\u5805\u6301\u81ea\u6211\u767c\u884c\u65b0EP\uff1a\u6211\u5011\u7684\u97f3\u6a02\u53ea\u70ba\u4e86\u8b93\u7c89\u7d72\u611f\u5230\u559c\u6085", "url": "https://www.famechos.me/news/\u6284\u8972\u98a8\u6ce2\u672a\u5e73\uff01ILLIT\u5805\u6301\u81ea\u6211\u767c\u884c\u65b0EP\uff1a\u6211\u5011\u7684\u97f3\u6a02\u53ea\u70ba\u4e86\u8b93\u7c89\u7d72\u611f\u5230\u559c\u6085.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T12:20:37.952501+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅.html"/>
+<meta name="description" content="ILLIT堅持自我發行新EP，堅守音樂初衷，為粉絲帶來喜悅。抄襲風波未平，ILLIT用行動證明音樂的真正價值。">
+
+<meta name="keywords" content="ILLIT, 抄襲風波, 自我發行, 新EP, 音樂初衷, 粉絲, 喜悅">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅.html" />
+        <meta property="og:title" content="抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅" />
+        <meta property="og:description" content="抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅" />
+        <meta property="twitter:description" content="抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>K-pop女團ILLIT（韓語：아일릿）在面臨持續的抄襲新褲子概念的指控下，發行了他們的第二張EP“我會喜歡你”。該團隊堅持不對抗的立場，強調他們專注於自己的創作道路。</p>
+<p>成員Yunah表示：“無論情況如何，我們都努力向粉絲展示我們的最佳作品。我們反思了所有幫助ILLIT成長的人，以及那些支持和鼓勵我們的人。”</p>
+<p>她還強調了該團隊在K-pop行業中開闢自己身份的決心，儘管存在爭議。“我們決心展示我們獨特的色彩和維護粉絲對ILLIT的愛，”Yunah補充道。</p>
+<p>該團隊因前Ador CEO閔熙珍的指控而面臨重大挑戰，閔熙珍在四月份聲稱ILLIT抄襲了新褲子的概念，作為他們的首張EP“Super Real Me”。ILLIT的經紀公司比立夫堅決否認了這些指控，稱其為不真實的。</p>
+<p>成員Wonhee表示，跟進他們的熱門歌曲“Magnetic”意外成功的壓力，該歌曲來自他們的第一張EP。“準備第二張迷你專輯時有一些壓力，”他說。“但最重要的是，我希望粉絲在聽到我們的音樂時感到喜悅。”</p>
+<p>新EP包含五首曲目，包括主打歌“Cherish (My Love)”，標題曲“我會喜歡你”，以及其他歌曲“我知道你知道”，“粉刺”和“滴答”。該團隊強調，“Cherish (My Love)”展示了他們大膽和坦率的魅力，重視自己的情感勝過外部驗證。</p>
+<ul>
+<li>主打歌：Cherish (My Love)</li>
+<li>標題曲：我會喜歡你</li>
+<li>其他歌曲：我知道你知道、粉刺、滴答</li>
+</ul>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1UYBmw5XaMc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP十一月大爆發！BTS成員Jin個人專輯、ENHYPEN新專輯、VIVIZ迷你專輯齊發.html">KPOP十一月大爆發！BTS成員Jin個人專輯、ENHYPEN新專輯、VIVIZ迷你專輯齊發</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！.html">K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！.html">74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
