@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 22 Oct 2024 12:10:07 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 12:20:54 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -309,5 +309,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>金在中製作的首支K-pop女團Say My Name出道。Say My Name是由K-pop歌手金在中製作的首支K-pop女團，於星期三出道，推出首張迷你專輯《Say My Name》。...</description>
   <category>K-Pop</category>
   <pubDate>Tue, 22 Oct 2024 12:10:07 +0800</pubDate>
+</item><item>
+  <title>抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅</title>
+  <link>https://www.famechos.me/news/抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅.html</link>
+  <description>ILLIT（韓語：아일릿）在抄襲新褲子指控中發行新EP...</description>
+  <category>K-Pop</category>
+  <pubDate>Tue, 22 Oct 2024 12:20:54 +0800</pubDate>
 </item></channel>
 </rss>
