@@ -308,4 +308,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T12:20:54+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
