@@ -45,3 +45,4 @@ https://koreatimes.co.kr/www/nation/2024/10/688_384039.html?utm_source=fl
 https://www.koreaherald.com/view.php?ud=20241014050669
 https://www.koreaherald.com/view.php?ud=20241018050483
 https://en.yna.co.kr/view/AEN20241022000800315?section=culture/k-pop&input=rss
+https://www.koreaherald.com/view.php?ud=20241016050559
